--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "To_do_list",
+  "name": "TO_DO_APP_VUE_NODE_EXPRESS_MONGODB",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
@@ -11,7 +11,6 @@
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "server": "nodemon server.js"
   },
   "keywords": [],
